--- a/.config
+++ b/.config
@@ -67,7 +67,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZO is not set
 # CONFIG_KERNEL_LZ4 is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
@@ -157,6 +157,7 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_PAGE_COUNTER=y
 CONFIG_MEMCG=y
+# CONFIG_MEMCG_SWAP is not set
 # CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_HUGETLB is not set
 # CONFIG_CGROUP_PERF is not set
@@ -470,6 +471,7 @@ CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 # CONFIG_TRANSPARENT_HUGEPAGE_MADVISE is not set
 CONFIG_CLEANCACHE=y
+# CONFIG_FRONTSWAP is not set
 # CONFIG_CMA is not set
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
@@ -518,6 +520,7 @@ CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+# CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -1358,6 +1361,7 @@ CONFIG_RFD_FTL=m
 CONFIG_SSFDC=m
 # CONFIG_SM_FTL is not set
 CONFIG_MTD_OOPS=m
+# CONFIG_MTD_SWAP is not set
 # CONFIG_MTD_PARTITIONED_MASTER is not set
 
 #
